--- a/quizzes.html
+++ b/quizzes.html
@@ -31,26 +31,62 @@ button:hover {background:#0066cc;}
 
 <main>
 
-<!-- قسم المفردات -->
-<div class="section" id="vocab-section">
-<h2>اختبار المفردات</h2>
-<!-- أسئلة 10 -->
-<!-- استخدم الأسئلة التي أرسلناها سابقاً هنا -->
-<!-- مثال السؤال 1 -->
-<div class="quiz-card" data-answer="تفاحة">
-<h3>السؤال 1: ما معنى كلمة "Apfel"؟</h3>
+<!-- سؤال 11 -->
+<div class="quiz-card" data-answer="تفاح">
+<h3>السؤال 11: ما معنى كلمة "Apfel"؟</h3>
 <form>
-<label><input type="radio" name="vocab1" value="تفاحة"> تفاحة</label>
-<label><input type="radio" name="vocab1" value="موز"> موز</label>
-<label><input type="radio" name="vocab1" value="عنب"> عنب</label>
+<label><input type="radio" name="vocab11" value="موز"> موز</label>
+<label><input type="radio" name="vocab11" value="تفاح"> تفاح</label>
+<label><input type="radio" name="vocab11" value="عنب"> عنب</label>
 </form>
-<div class="solution">الحل الصحيح: تفاحة</div>
+<div class="solution">الحل الصحيح: تفاح</div>
 </div>
-<!-- كرر بقية الأسئلة حتى 10 -->
 
-<button onclick="checkSection('vocab',10)">عرض النتيجة والحلول</button>
-<div class="section-result" id="vocab-result"></div>
+<!-- سؤال 12 -->
+<div class="quiz-card" data-answer="موز">
+<h3>السؤال 12: ما معنى كلمة "Banane"؟</h3>
+<form>
+<label><input type="radio" name="vocab12" value="تفاح"> تفاح</label>
+<label><input type="radio" name="vocab12" value="موز"> موز</label>
+<label><input type="radio" name="vocab12" value="كرز"> كرز</label>
+</form>
+<div class="solution">الحل الصحيح: موز</div>
 </div>
+
+<!-- سؤال 13 -->
+<div class="quiz-card" data-answer="عنب">
+<h3>السؤال 13: ما معنى كلمة "Traube"؟</h3>
+<form>
+<label><input type="radio" name="vocab13" value="عنب"> عنب</label>
+<label><input type="radio" name="vocab13" value="تفاح"> تفاح</label>
+<label><input type="radio" name="vocab13" value="موز"> موز</label>
+</form>
+<div class="solution">الحل الصحيح: عنب</div>
+</div>
+
+<!-- سؤال 14 -->
+<div class="quiz-card" data-answer="برتقال">
+<h3>السؤال 14: ما معنى كلمة "Orange"؟</h3>
+<form>
+<label><input type="radio" name="vocab14" value="برتقال"> برتقال</label>
+<label><input type="radio" name="vocab14" value="تفاح"> تفاح</label>
+<label><input type="radio" name="vocab14" value="موز"> موز</label>
+</form>
+<div class="solution">الحل الصحيح: برتقال</div>
+</div>
+
+<!-- سؤال 15 -->
+<div class="quiz-card" data-answer="فراولة">
+<h3>السؤال 15: ما معنى كلمة "Erdbeere"؟</h3>
+<form>
+<label><input type="radio" name="vocab15" value="كرز"> كرز</label>
+<label><input type="radio" name="vocab15" value="فراولة"> فراولة</label>
+<label><input type="radio" name="vocab15" value="تفاح"> تفاح</label>
+</form>
+<div class="solution">الحل الصحيح: فراولة</div>
+</div>
+<button onclick="checkSection('vocab',15)">عرض النتيجة والحلول</button>
+
 
 <!-- قسم القواعد -->
 <div class="section" id="grammar-section">
