--- a/quizzes.html
+++ b/quizzes.html
@@ -776,6 +776,126 @@ function checkSection(section, totalQuestions) {
 </script>
 </div>
 
+<div class="section" id="writing-section">
+<h2>اختبار الكتابة والتصحيح (15 سؤال)</h2>
+
+<!-- سؤال 1 -->
+<div class="quiz-card" data-answer="Ich gehe zur Schule.">
+<h3>السؤال 1: اكتب جملة باستخدام الفعل "gehen" (أنا أذهب إلى المدرسة).</h3>
+<textarea id="write1" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich gehe zur Schule.</div>
+</div>
+
+<!-- سؤال 2 -->
+<div class="quiz-card" data-answer="Ich heiße Anna.">
+<h3>السؤال 2: اكتب جملة تقول فيها اسمك بالألمانية.</h3>
+<textarea id="write2" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich heiße Anna.</div>
+</div>
+
+<!-- سؤال 3 -->
+<div class="quiz-card" data-answer="Ich habe ein Buch.">
+<h3>السؤال 3: اكتب جملة باستخدام "haben" لقول "لدي كتاب".</h3>
+<textarea id="write3" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich habe ein Buch.</div>
+</div>
+
+<!-- سؤال 4 -->
+<div class="quiz-card" data-answer="Ich spreche Deutsch.">
+<h3>السؤال 4: اكتب جملة تقول "أنا أتكلم الألمانية".</h3>
+<textarea id="write4" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich spreche Deutsch.</div>
+</div>
+
+<!-- سؤال 5 -->
+<div class="quiz-card" data-answer="Guten Morgen!">
+<h3>السؤال 5: اكتب التحية "صباح الخير" بالألمانية.</h3>
+<textarea id="write5" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Guten Morgen!</div>
+</div>
+
+<!-- سؤال 6 -->
+<div class="quiz-card" data-answer="Mir geht es gut.">
+<h3>السؤال 6: اكتب جملة تقول "أنا بخير".</h3>
+<textarea id="write6" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Mir geht es gut.</div>
+</div>
+
+<!-- سؤال 7 -->
+<div class="quiz-card" data-answer="Ich wohne in Berlin.">
+<h3>السؤال 7: اكتب جملة تقول "أنا أسكن في برلين".</h3>
+<textarea id="write7" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich wohne in Berlin.</div>
+</div>
+
+<!-- سؤال 8 -->
+<div class="quiz-card" data-answer="Wie heißen Sie?">
+<h3>السؤال 8: اكتب السؤال "ما اسمك؟" رسميًا بالألمانية.</h3>
+<textarea id="write8" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Wie heißen Sie?</div>
+</div>
+
+<!-- سؤال 9 -->
+<div class="quiz-card" data-answer="Ich mag Deutsch.">
+<h3>السؤال 9: اكتب جملة تقول "أنا أحب الألمانية".</h3>
+<textarea id="write9" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich mag Deutsch.</div>
+</div>
+
+<!-- سؤال 10 -->
+<div class="quiz-card" data-answer="Ich lerne Deutsch.">
+<h3>السؤال 10: اكتب جملة تقول "أنا أتعلم الألمانية".</h3>
+<textarea id="write10" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich lerne Deutsch.</div>
+</div>
+
+<!-- سؤال 11 -->
+<div class="quiz-card" data-answer="Ich trinke Wasser.">
+<h3>السؤال 11: اكتب جملة تقول "أنا أشرب الماء".</h3>
+<textarea id="write11" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich trinke Wasser.</div>
+</div>
+
+<!-- سؤال 12 -->
+<div class="quiz-card" data-answer="Ich lese ein Buch.">
+<h3>السؤال 12: اكتب جملة تقول "أنا أقرأ كتاب".</h3>
+<textarea id="write12" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich lese ein Buch.</div>
+</div>
+
+<!-- سؤال 13 -->
+<div class="quiz-card" data-answer="Ich esse Brot.">
+<h3>السؤال 13: اكتب جملة تقول "أنا آكل خبز".</h3>
+<textarea id="write13" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich esse Brot.</div>
+</div>
+
+<!-- سؤال 14 -->
+<div class="quiz-card" data-answer="Ich sehe den Hund.">
+<h3>السؤال 14: اكتب جملة تقول "أنا أرى الكلب".</h3>
+<textarea id="write14" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich sehe den Hund.</div>
+</div>
+
+<!-- سؤال 15 -->
+<div class="quiz-card" data-answer="Ich spiele Fußball.">
+<h3>السؤال 15: اكتب جملة تقول "أنا ألعب كرة القدم".</h3>
+<textarea id="write15" rows="2" cols="40" placeholder="اكتب هنا"></textarea>
+<div class="solution">الحل الصحيح: Ich spiele Fußball.</div>
+</div>
+
+<button onclick="showWritingSolutions()">عرض الحلول</button>
+
+<script>
+function showWritingSolutions() {
+    const cards = document.querySelectorAll('#writing-section .quiz-card');
+    cards.forEach(card => {
+        card.querySelector('.solution').style.display = 'block';
+    });
+}
+</script>
+</div>
+    
 
 
 
